--- a/src/Nested.Samples.RegionsHierarchy/Nested.Samples.RegionsHierarchy.csproj
+++ b/src/Nested.Samples.RegionsHierarchy/Nested.Samples.RegionsHierarchy.csproj
@@ -18,6 +18,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.8.18" />
   </ItemGroup>
 
   <ItemGroup>
