--- a/src/Nested.Samples.RegionsHierarchy/Nested.Samples.RegionsHierarchy.csproj
+++ b/src/Nested.Samples.RegionsHierarchy/Nested.Samples.RegionsHierarchy.csproj
@@ -18,7 +18,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
-    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.8.18" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,6 +26,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Nested.LinqExtensions\Nested.LinqExtensions.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Z.EntityFramework.Plus.EFCore">
+      <HintPath>..\..\..\..\opensource\EntityFramework-Plus\src\Z.EntityFramework.Plus.EFCore.NETStandard20\bin\Debug\netstandard2.0\Z.EntityFramework.Plus.EFCore.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
