--- a/src/Nested.LinqExtensions.Tests/Nested.Linqextensions.Tests.csproj
+++ b/src/Nested.LinqExtensions.Tests/Nested.Linqextensions.Tests.csproj
@@ -6,6 +6,14 @@
     <RootNamespace>Nested.LinqExtensions.Tests</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <CodeAnalysisRuleSet />
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <CodeAnalysisRuleSet />
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.0" />
     <PackageReference Include="NUnit" Version="3.11.0" />
