--- a/src/Nested.Samples.RegionsHierarchy/Nested.Samples.RegionsHierarchy.csproj
+++ b/src/Nested.Samples.RegionsHierarchy/Nested.Samples.RegionsHierarchy.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyName>EFNested</AssemblyName>
-    <RootNamespace>EFNested</RootNamespace>
+    <AssemblyName>Nested.Samples.RegionsHierarchy</AssemblyName>
+    <RootNamespace>Nested.Samples.RegionsHierarchy</RootNamespace>
     <ApplicationIcon />
     <StartupObject />
   </PropertyGroup>
